rawExtracts/DriverManagerApp/main/default/objects/Case/fields/uDriverState__c.field-meta.xml
<CustomField>
    <fullName>uDriverState__c</fullName>
    <label>uDriverState</label>
    <length>100</length>
    <type>Text</type>
</CustomField>