rawExtracts/DriverManagerApp/main/default/objects/Case/fields/uDriverStreet__c.field-meta.xml
<CustomField>
    <fullName>uDriverStreet__c</fullName>
    <label>uDriverStreet</label>
    <length>75</length>
    <type>Text</type>
</CustomField>