rawExtracts/DriverManagerApp/main/default/objects/Case/fields/uDriverZipCode__c.field-meta.xml
<CustomField>
    <fullName>uDriverZipCode__c</fullName>
    <label>uDriverZipCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>